# ximenesyuri.com

./: .buildinfo  .gitignore  CNAME  Makefile  README.md  about.html  development.html  education.html  genindex.html  index.html  objects.inv  publications.html  pyproject.toml  requirements.txt  research.html  search.html  searchindex.js  setup.html  work.html
.doctrees/: about.doctree  development.doctree  education.doctree  environment.pickle  index.doctree  publications.doctree  research.doctree  setup.doctree  work.doctree
.doctrees/libs/: index.doctree
.doctrees/notes/: index.doctree
.github/workflows/: deploy.yaml
_sources/: about.md.txt  index.md.txt  publications.md.txt  setup.md.txt  work.md.txt
_sources/libs/: index.md.txt
_static/: documentation_options.js  index.css
content/: about.md  development.md  education.md  index.md  publications.md  research.md  work.md
content/glossary/: index.md
content/libs/: index.md
content/notes/: README.md  glossary.md  index.md  languages.md  refs.md  sets.md  systems.md
glossary/: general.html  index.html  infra.html  logic.html  programming.html
libs/: index.html
libs/app/: 1-components.html  2-models.html  3-rendering.html  4-statics.html  app.html  component.html  index.html
libs/cli/: index.html
libs/comp/: CHANGELOG.html  changelog.html  compatibility.html  components.html  entities.html  glossary.html  index.html  jinja.html  models.html  (+4 more)
notes/: README.html  glossary.html  index.html  languages.html  refs.html  sets.html  systems.html
src/: about.md  changelog.md  conf.py  index.md
(+132 files in other folders)
