[project]
name = "<project-name>"
version = "0.0.0"
description = "<project-description>"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "<project-license>"}
authors = [
    {name = "<your_name>", email = "<your@email.com>"},
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["<project-name>*"]

